--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,10 +32,14 @@ dependencies:
     sdk: flutter
 
 
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   google_fonts: ^6.1.0
+  flutter_layout_grid: ^2.0.5
+  figma_layout_grid: ^0.3.2
+  device_preview: ^1.1.0
 
 dev_dependencies:
   flutter_test:
