--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,7 @@ flutter:
   assets:
     - assets/Saly-10.png
     - assets/Saly-24.png
+    - assets/Saly-36.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
