done with home screen

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,6 +69,7 @@ flutter:
     - assets/Saly-10.png
     - assets/Saly-24.png
     - assets/Saly-36.png
+    - assets/Saly-13.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
