added additional assets for details screen

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   figma_layout_grid: ^0.3.2
   device_preview: ^1.1.0
   flutter_rating_bar: ^4.0.1
+  flutter_svg: ^2.0.7
 
 dev_dependencies:
   flutter_test:
@@ -70,6 +71,14 @@ flutter:
     - assets/Saly-24.png
     - assets/Saly-36.png
     - assets/Saly-13.png
+    - assets/Saly-20.png
+    - assets/Saly-21.png
+    - assets/Saly-25.png
+    - assets/Ellipse 3.png
+    - assets/Ellipse 4.png
+    - assets/Ellipse 5.png
+    - assets/Ellipse 6.png
+    - assets/Frame.svg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
